The launcher writes client/haven-config.properties instead of passing -U
The proxy checkbox and the new Options field Addons folder are written as
haven.resurl and haven.addondir into the client's own file (line in place, the
rest kept; an empty addons folder removes its line) on every change and before
every Play, since an unpacked release restores the zip's copy. Nothing of the
client's configuration is on the command line. resource.url carries the game's
own address for the off state.

Options help lines, launcher.properties comments, the README and every javadoc
are reduced to the flag, key or fact each describes. A failed settings write is
printed to stderr instead of swallowed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>