@@ -29,31 +29,28 @@ import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 
 /**
- * The Options dialog: what shapes the way the game is started, each setting under a name a player can read
- * and a line saying what the parameter does — never what it did on one particular machine — over a live
- * preview of the command they make. OK writes them to <code>launcher.properties</code>; Cancel leaves
- * everything as it was. What every client needs to run at all (the module exports, native access, the
- * Unsafe allowance) is not on offer.
+ * Modal dialog over the settings {@link Launcher#command} and {@link Settings#clientConfig} use, each with the
+ * flag or key it sets, plus a live preview of the command. OK writes all of them to
+ * <code>launcher.properties</code>; Cancel writes nothing. Fixed flags (exports, native access, Unsafe) are not
+ * shown.
  */
 final class OptionsDialog {
     private OptionsDialog() {}
 
-    /** The bar's ends: 1 GB, and half of what the machine has — never past 16 GB, and never under 2, so that a
-     *  small machine still gets a bar rather than a single value. */
+    /** Heap slider: <code>MIN_GB</code> to <code>max(MIN_GB + 1, min(CAP_GB, totalGb / 2))</code>. */
     static final int MIN_GB = 1, CAP_GB = 16;
 
-    /** Open the dialog over <code>owner</code>, modal; back when it is closed. <code>java</code> is the executable
-     *  the preview's command starts with: the one Play would use. */
+    /** Show modally; returns on close. <code>java</code> is the executable the preview starts with. */
     static void show(JFrame owner, Settings settings, Path java) {
         JDialog d = new JDialog(owner, "Options", true);
 
         long totalGb = totalMemoryGb();
         int maxGb = (totalGb <= 0) ? 8 : (int)Math.max(MIN_GB + 1, Math.min(CAP_GB, totalGb / 2));
         JSlider heap = new JSlider(MIN_GB, maxGb, Math.max(MIN_GB, Math.min(maxGb, heapGb(settings.heap()))));
-        int step = (maxGb - MIN_GB > 8) ? 2 : 1;             // one label per GB up to 9 of them, else every other
+        int step = (maxGb - MIN_GB > 8) ? 2 : 1;             // label every GB up to 9 labels, else every 2
         heap.setMajorTickSpacing(step);
         heap.setMinorTickSpacing(1);
-        heap.setLabelTable(heap.createStandardLabels(step, (step == 1) ? MIN_GB : 2));   // even numbers when every other
+        heap.setLabelTable(heap.createStandardLabels(step, (step == 1) ? MIN_GB : 2));   // even labels at step 2
         heap.setPaintTicks(true);
         heap.setPaintLabels(true);
         heap.setSnapToTicks(true);
@@ -72,6 +69,7 @@ final class OptionsDialog {
         ipv6.setSelectedIndex(switch(settings.ipv6()) { case "false" -> 1; case "true" -> 2; default -> 0; });
         JTextField opts = new JTextField(settings.javaOptsText(), 30);
         JTextField proxyUrl = new JTextField(settings.resourceProxyUrl(), 30);
+        JTextField addonsDir = new JTextField(settings.addonsDir(), 30);
         JCheckBox updates = new JCheckBox("Look for a newer launcher and game when the launcher opens", settings.checkUpdates());
 
         JTextArea preview = new JTextArea(5, 64);
@@ -84,12 +82,11 @@ final class OptionsDialog {
             Settings.Launch l = new Settings.Launch(heap.getValue() + "g", pretouch.isSelected(),
                 (gc.getSelectedIndex() == 1) ? "g1" : "zgc", uiScale.isSelected(),
                 switch(ipv6.getSelectedIndex()) { case 1 -> "false"; case 2 -> "true"; default -> "system"; },
-                Settings.split(opts.getText()), settings.resourceProxy(), proxyUrl.getText().trim());
+                Settings.split(opts.getText()));
             preview.setText(String.join(" ", Launcher.command(java, l)));
             preview.setCaretPosition(0);
         };
         onChange(opts, refresh);
-        onChange(proxyUrl, refresh);
         heap.addChangeListener(ev -> refresh.run());
         pretouch.addActionListener(ev -> refresh.run());
         gc.addActionListener(ev -> refresh.run());
@@ -100,22 +97,23 @@ final class OptionsDialog {
         JPanel form = new JPanel(new GridBagLayout());
         Row r = new Row(form);
         r.add("Game memory", heapRow,
-              "How much memory the game is given; it is set aside when the game starts. "
-              + ((totalGb > 0) ? "Your PC has " + totalGb + " GB, and the bar stops at half of it." : "The bar stops at " + maxGb + " GB."));
+              "-Xms/-Xmx" + ((totalGb > 0) ? " (installed: " + totalGb + " GB)" : ""));
         r.add(null, pretouch,
-              "Take all of that memory the moment the game starts, rather than piece by piece as it is first used.");
+              "-XX:+AlwaysPreTouch");
         r.add("Memory cleanup", gc,
-              "How the game frees the memory it no longer needs: while it keeps running, or in short stops.");
+              "-XX:+UseZGC, or G1 (the JVM default)");
         r.add(null, uiScale,
-              "On a high-DPI screen, let Windows enlarge the whole window. Off, the game draws at 1:1 and scales its own interface (see its options).");
+              "Off: -Dsun.java2d.uiScale.enabled=false");
         r.add("Network addresses", ipv6,
-              "Which kind of address to try first when a server has both an IPv4 and an IPv6 one.");
+              "-Djava.net.preferIPv6Addresses=system|false|true");
         r.add("Extra Java options", opts,
-              "Anything else to hand to Java when the game starts, separated by spaces. Leave empty unless you know what you want.");
+              "Appended to the JVM command line, space-separated");
         r.add("Resource cache address", proxyUrl,
-              "Where the game fetches its resources from while 'Use brodgar.io resource cache proxy' is ticked.");
+              "haven.resurl in client/haven-config.properties while the proxy checkbox is on");
+        r.add("Addons folder", addonsDir,
+              "haven.addondir in client/haven-config.properties; empty: client/addons. savedata/ sits beside it");
         r.add(null, updates,
-              "Off, the launcher never looks for a release, its own or the game's, and offers whatever is installed.");
+              "check.updates: GitHub release lookup for the launcher and the client at start");
         r.preview("The game will be started as:", new JScrollPane(preview));
 
         JButton ok = new JButton("OK");
@@ -128,6 +126,7 @@ final class OptionsDialog {
             settings.set("ipv6", switch(ipv6.getSelectedIndex()) { case 1 -> "false"; case 2 -> "true"; default -> "system"; });
             settings.set("java.opts", opts.getText().trim());
             settings.set("resource.proxy.url", proxyUrl.getText().trim());
+            settings.set("addons.dir", addonsDir.getText().trim());
             settings.set("check.updates", String.valueOf(updates.isSelected()));
             d.dispose();
         });
@@ -150,8 +149,7 @@ final class OptionsDialog {
         d.setVisible(true);
     }
 
-    /** A heap setting as whole gigabytes: <code>4g</code> is 4, <code>1536m</code> rounds up to 2, anything else is
-     *  the bar's low end. */
+    /** <code>Ng</code> → N; <code>Nm</code> → ceil(N / 1024); else <code>MIN_GB</code>. */
     static int heapGb(String value) {
         String v = value.trim().toLowerCase();
         if(v.matches("\\d+g"))
@@ -161,18 +159,19 @@ final class OptionsDialog {
         return MIN_GB;
     }
 
-    /** The machine's physical memory in whole gigabytes, or 0 when it cannot be read. */
+    /** Physical memory in GB (rounded) via <code>com.sun.management.OperatingSystemMXBean</code>; 0 if
+     *  unavailable. */
     static long totalMemoryGb() {
         try {
             if(ManagementFactory.getOperatingSystemMXBean() instanceof com.sun.management.OperatingSystemMXBean os)
                 return Math.round(os.getTotalMemorySize() / (1024.0 * 1024 * 1024));
         } catch(RuntimeException | LinkageError e) {
-            // a runtime without jdk.management: the bar takes its fallback
+            // no jdk.management module
         }
         return 0;
     }
 
-    /** The form's rows: a name, a control, and a line under them saying what the setting does. */
+    /** GridBag rows: label + control, then a help line spanning both columns. */
     private static final class Row {
         private final JPanel form;
         private final GridBagConstraints c = new GridBagConstraints();
